Fixing size issues with wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,19 @@
 	border-bottom-width: 0;
 	padding: 0.375rem;
 }
+
+
+.app-expert {
+	width: 31.3125rem;
+	height: 21.0625rem;
+}
+
+.app-intermediate {
+	width: 17.3125rem;
+	height: 21.0625rem;
+}
+
+.app-beginner {
+	width: 11.3125rem;
+	height: 15.0625rem;
+}
